fix: fix table search alignment

--- a/src/table/Table.less
+++ b/src/table/Table.less
@@ -280,14 +280,14 @@
 	&__searchInput[type='text'] {
 		flex: 1;
 		border-bottom: none;
-		padding: 0 @sp-40;
+		padding: 0 @sp-48;
 		background-color: transparent;
 	}
 
 	&__searchIcon {
 		position: absolute;
-		top: 10px;
-		left: 8px;
+		top: @sp-08;
+		left: @sp-16;
 		font-size: 16px;
 		color: var(--icon-disabled);
 	}
